--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,124 @@
-* {
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     background-color: #FBEBEB;
+    font-family: Rubik;
+}
+
+h1, h2, p {
+    font-family: Rubik;
+}
+
+h1, h2 {
+    font-weight: 700;
+}
+
+h3 {
+    font-family: Space Mono;
+    font-weight: 700;
+}
+
+.header-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.square {
+    margin-right: 1.7%;
+    background-color: #E1454F;
+    color: #E1454F;
+    height: 25px;
+    width: 25px;
+    border-radius: 5px;
+}
+
+.lunch-box {
+    margin: 5% 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.handle {
+    border: 15px solid #000000;
+    height: 2rem;
+    width: 12rem;
+    border-radius: 40px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom-style: hidden;
+}
+
+
+#upper-box, #lower-box {
+    width: 25rem;
+    height: 16rem;
+    border: 15px solid black;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#upper-box {
+    background-color: #E1454F;
+}
+
+h3 {
+    font-size: 10rem;
+}
+
+#lower-box {
+    background-color: #DBE5F0;
+}
+
+#lower-box a {
+    background-color: #1A64BC;
+    color: white;
+    padding: 2% 3%;
+    border-radius: 10px;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: flex;
+}
+
+@media (max-width:411px){
+    #upper-box, #lower-box {
+        width: 17rem;
+        height: 11rem;
+        border: 10px solid black;
+        border-radius: 30px;
+    }
+    .handle {
+        border: 10px solid #000000;
+        height: 1.5rem;
+        width: 9rem;
+        border-radius: 30px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+        border-bottom-style: hidden
+    }
+
+    h1 {
+        font-size: 1.7rem;
+    }
+
+    h2 {
+        font-size: 1.3rem;
+    }
+
+    .hide {
+        display: none;
+    }
+
 }
